--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -78,22 +78,18 @@ jobs:
         mv "$APK_PATH" "amneziawg-android-signed.apk"
         echo "📦 APK подготовлен: amneziawg-android-signed.apk"
 
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v2.4.1
-      with:
-        files: amneziawg-android-signed.apk
-        tag_name: v${{ github.run_number }}
-        name: AmneziaWG Android v${{ github.run_number }}
-        body: |
-          ## 📱 Подписанная версия AmneziaWG Android
-          
-          **ВАЖНО**: Этот APK подписан временным ключом для тестирования.
-          
-          Для установки необходимо:
-          1. Разрешить установку из неизвестных источников
-          2. Удалить предыдущую версию приложения
-          3. Установить этот APK
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create Release via GitHub API
+      run: |
+        curl -L \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/${{ github.repository }}/releases \
+        -d '{
+          "tag_name": "v${{ github.run_number }}",
+          "name": "v${{ github.run_number }}", 
+          "body": "## 📱 Подписанная версия AmneziaWG Android\n\n**ВАЖНО**: Этот APK подписан временным ключом для тестирования.",
+          "draft": false,
+          "prerelease": false
+        }'
